2008-08-02  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (dfsch__conditions_register): interface to
	condition system.

2008-07-31  Ales Hakl  <ales at hakl dot net>

	* src/control.c (throw): throw function 

2008-07-29  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h (DFSCH_SCATCH): do not restore restarts and
	handlers on normal return

2008-07-28  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (restart_t): handlers are property of restart,
	not of entry in restart stack.
	low-level routines for handler-bind and restart-bind

	* dfsch/magic.h (DFSCH_RESTORE_RESTARTS): correct name
	Cleaned up dynamic environment relations between handlers and
	restarts (handler needs to see restarts enclosed, but restart
	should only see enclosing handlers).

2008-07-27  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (dfsch__condition_write): Print conditions

2008-07-20  Ales Hakl  <ales at hakl dot net>

	* src/control.c: removed exception-related functions

	* src/conditions.c (dfsch_signal): condition system: signal function

2008-07-12  Ales Hkl  <ales at hakl dot net>

	* src/strings.c: Initialize head to NULL

2008-07-08  Ales Hakl  <ales at hakl dot net>

	* src/ports.c: use int64_t for file offsets

2008-07-06  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_cmp): fixed number comparison (which
	did not work for fractions and hung for bignums)

	* src/strings.c: removed the for-each api
	(dfsch_string_cmp_ci): case-insensitive comparison
	(string_case): case conversions of strings.

2008-07-05  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_char_*case): Case conversions of characters 
	(utf8_substring_cb): fixed substring

2008-06-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_get_object_properties): object properties

	* dfsch/number.h: number type and exactness predicates

	* src/weak.c (weak_key_hash_ref): weak-key-hash

2008-06-27  Ales Hakl  <ales at hakl dot net>
