@@ -23,7 +23,8 @@ nobase_include_HEADERS = dfsch/lib/threads.h \
 	dfsch/util.h \
 	dfsch/compiler.h\
 	dfsch/bignum.h \
-	dfsch/conditions.h
+	dfsch/conditions.h \
+	dfsch/debug.h
 
 lib_LTLIBRARIES = libdfsch.la \
 	libdfsch-extref.la \
@@ -64,7 +65,8 @@ libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/types.h src/internal.h\
 	src/ports.c dfsch/ports.h	\
 	src/load.c dfsch/load.h		\
 	src/compiler.c dfsch/compiler.h \
-	src/conditions.c dfsch/conditions.h
+	src/conditions.c dfsch/conditions.h	\
+	src/debug.c dfsch/debug.h
 
 libdfsch_la_LDFLAGS = -version-info 5:0:0
 libdfsch_la_LIBADD =  -lgc -lpthread -ldl -lm
